
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/action_show_actual_data"
            android:orderInCategory="100"
            android:title="@string/action_show_actual_data"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_show_history"
            android:orderInCategory="100"
            android:title="@string/action_show_history"
            app:showAsAction="never"/>

    </group>

    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="100"
        android:title="@string/action_clear_history"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never"/>
</menu>